# csep

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  benchmark.sh
data/: rust.txt  typescript.txt
data/subdir/: more.txt
docs/: csep.1
scripts/: benchmark.sh  build_deb.sh  csep.rb  homebrew.sh
src/: args.rs  chunker.rs  embeddings.rs  files.rs  main.rs  utils.rs
src/clients/: fastembed.rs  mod.rs  ollama.rs
src/feature/: comparison.rs  default.rs  mod.rs
