[package]
name = "csep"
version = "0.1.7"
edition = "2021"
authors = ["Divan Visagie <me@divanv.com>"]
license = "GPL-2.0"
description = "Cosine Similarity Embeddings Print"

[dependencies]
atty = "0.2.14"
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
text-splitter = { version = "0.12.1", features = ["tiktoken-rs"] }
tiktoken-rs = "0.5.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
rayon = "1.10.0"
dirs = "5.0.1"
anyhow = "1.0.86"
sha2 = "0.10.8"
bincode = "1.3.3"
ignore = "0.4.22"
memmap2 = "0.9.4"
