[package]
name = "csep"
version = "0.1.7"
edition = "2021"
authors = ["Divan Visagie <me@divanv.com>"]
license = "GPL-2.0"
description = "Cosine Similarity Embeddings Print"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
atty = "0.2.14"
bincode = "1.3.3"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.30"
ignore = "0.4.22"
memmap2 = "0.9.4"
openssl = { version = "0.10.64", features = ["vendored"] }
rayon = "1.10.0"
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
spinners = "4.1.1"
text-splitter = { version = "0.12.1", features = ["tiktoken-rs"] }
tiktoken-rs = "0.5.8"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
